// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogoLock Component renders correctly with given width and height 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="150"
  bbWidth="100"
  fill="none"
  focusable={false}
  height="150"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 150,
        "width": 100,
      },
    ]
  }
  vbHeight={64}
  vbWidth={64}
  width="100"
  xmlns="http://www.w3.org/2000/svg"
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={
        {
          "payload": 4279506459,
          "type": 0,
        }
      }
      height="56"
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4289760599,
          "type": 0,
        }
      }
      strokeWidth="1.5"
      width="56"
      x="4"
      y="4"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4278716683,
          "type": 0,
        }
      }
      height="36"
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4280954422,
          "type": 0,
        }
      }
      strokeWidth="1"
      width="36"
      x="14"
      y="14"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4292128631,
          "type": 0,
        }
      }
      height="14"
      propList={
        [
          "fill",
        ]
      }
      rx="2"
      width="14"
      x="25"
      y="20"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4292128631,
          "type": 0,
        }
      }
      height="14"
      propList={
        [
          "fill",
        ]
      }
      rx="1"
      width="6"
      x="29"
      y="32"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`LogoLock Component renders correctly without width and height 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={64}
  vbWidth={64}
  xmlns="http://www.w3.org/2000/svg"
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={
        {
          "payload": 4279506459,
          "type": 0,
        }
      }
      height="56"
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4289760599,
          "type": 0,
        }
      }
      strokeWidth="1.5"
      width="56"
      x="4"
      y="4"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4278716683,
          "type": 0,
        }
      }
      height="36"
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4280954422,
          "type": 0,
        }
      }
      strokeWidth="1"
      width="36"
      x="14"
      y="14"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4292128631,
          "type": 0,
        }
      }
      height="14"
      propList={
        [
          "fill",
        ]
      }
      rx="2"
      width="14"
      x="25"
      y="20"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4292128631,
          "type": 0,
        }
      }
      height="14"
      propList={
        [
          "fill",
        ]
      }
      rx="1"
      width="6"
      x="29"
      y="32"
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
